<resources>
    <string name="app_name">RickAndMortyApplication</string>
    <string name="header">Добро пожаловать!</string>
    <string name="sub_title">Здесь ты найдёшь персонажей, истории и немного межгалактического абсурда!</string>
    <string name="auth">Войти</string>
    <string name="reg">Зарегистрироваться</string>
    <string name="create_acc">Создайте новый аккаунт</string>
    <string name="auth_do">Войдите в аккаунт</string>
    <string name="rick_and_morty">Rick &amp; Morty</string>
    <string name="out">Выйти</string>
    <string name="email">Электронная почта</string>
    <string name="settings">Настройки</string>
    <string name="next">Загрузить еще</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auto_load">Автозагрузка страниц</string>
    <string name="display_mode_list">Список</string>
    <string name="display_mode_grid">Сетка</string>
    <string name="backup_file_name">Имя файла резервной копии</string>
    <string name="backup">Резервное копирование</string>
    <string name="create_backup">Создать резервную копию</string>
    <string name="delete_backup">Удалить резервную копию</string>
    <string name="restore_backup">Восстановить данные</string>
    <string name="save_settings">Сохранить настройки</string>
    <string name="no_backup_info">Резервный файл отсутствует</string>
    <string name="mode">Режим отображения</string>
    <string name="refresh">Обновить</string>
</resources>