<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#043c6e"
    tools:context=".fragment.OnboardFragment">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/header"
        android:gravity="center"
        android:textColor="#88e23b"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub_title"
        android:gravity="center"
        android:textStyle="normal"
        android:textColor="#ebe480"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="40dp">

        <Button
            android:id="@+id/but_auth"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#60a85f"
            android:text="@string/auth"
            android:textStyle="bold"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/but_reg"
            android:layout_width="240dp"
            android:layout_height="60dp"
            android:backgroundTint="#6b7132"
            android:text="@string/reg"
            android:textStyle="bold"
            android:textColor="#ffffff" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="391dp"
        android:layout_height="371dp"
        android:layout_marginTop="60dp"
        app:layout_constraintBottom_toTopOf="@+id/button_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sub_title"
        app:srcCompat="@drawable/rick" />

</androidx.constraintlayout.widget.ConstraintLayout>