<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#60a85f"
    tools:context=".fragment.SignInFragment">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="295dp"
        android:layout_height="75dp"
        app:srcCompat="@drawable/klipartz_com_3_"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"/>

    <ImageButton
        android:id="@+id/back_button_auth"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        app:tint="#ffffff" />

    <TextView
        android:id="@+id/header_auth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/auth_do"
        android:textColor="#ffffff"
        android:textSize="32sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="120dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/user_login_auth"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="32dp"
        android:hint="Введите логин"
        android:inputType="text"
        android:textColorHint="#ebe480"
        app:layout_constraintTop_toBottomOf="@id/header_auth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/user_pass_auth"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        android:hint="Введите пароль"
        android:inputType="textPassword"
        android:textColorHint="#ebe480"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_login_auth" />

    <Button
        android:id="@+id/auth"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#6b7132"
        android:text="@string/auth"
        android:textColor="#ffffff"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_pass_auth" />

    <TextView
        android:id="@+id/but_reg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/reg"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/auth"/>
</androidx.constraintlayout.widget.ConstraintLayout>