<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6b7132"
    tools:context=".fragment.SignUpFragment">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="295dp"
        android:layout_height="75dp"
        app:srcCompat="@drawable/klipartz_com_3_"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"/>

    <ImageButton
        android:id="@+id/back_button_reg"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        app:tint="#ffffff" />

    <TextView
        android:id="@+id/header_reg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_acc"
        android:textColor="#ffffff"
        android:textSize="32sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="120dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/user_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="32dp"
        android:hint="Введите логин"
        android:inputType="text"
        android:textColorHint="#ebe480"
        app:layout_constraintTop_toBottomOf="@id/header_reg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/user_email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        android:hint="Введите почту"
        android:inputType="textEmailAddress"
        android:textColorHint="#ebe480"
        app:layout_constraintTop_toBottomOf="@id/user_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/user_number"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        android:hint="Введите номер телефона"
        android:inputType="number"
        android:textColorHint="#ebe480"
        app:layout_constraintTop_toBottomOf="@id/user_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/user_pass"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        android:hint="Введите пароль"
        android:inputType="textPassword"
        android:textColorHint="#ebe480"
        app:layout_constraintTop_toBottomOf="@id/user_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/reg"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#60a85f"
        android:text="@string/reg"
        android:textColor="#ffffff"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_pass" />

    <TextView
        android:id="@+id/but_auth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/auth"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg"/>
</androidx.constraintlayout.widget.ConstraintLayout>